# Kitu-logic-processor

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  build-release.sh  docker-compose.yml
.cargo/: config.toml
kitu-logic-processor/: Cargo.toml  Dockerfile
src/: actor.rs  lib.rs  main.rs
tests/: integration-test.rs
