[package]
name = "kitu-logic-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "0.10.1"
pest = "2.7.10"
pest_derive = "2.7.10"

[target.'cfg(target_os = "ios")'.dependencies]
# iOS特有の依存関係をここに記述

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[lib]
name = "kitu_logic_processor"
crate-type = ["cdylib", "rlib"]

[features]
default = []