[package]
name = "kitu-logic-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13" # アクターフレームワーク
actix-rt = "2.9.0"
rosc = "0.10.1" # OSCライブラリ
pest = "2.7.10" # パーサジェネレータ
pest_derive = "2.7.10" # パーサジェネレータ
tokio = { version = "1", features = ["full"] } # 非同期ランタイム テスト用

[dev-dependencies]
kitu-logic-processor = { path = "." }

[target.'cfg(target_os = "ios")'.dependencies]
# iOS特有の依存関係をここに記述

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[lib]
name = "kitu_logic_processor"
crate-type = ["cdylib", "rlib"]


[features]
default = []